--- a/beanmaker2-codegen/pom.xml
+++ b/beanmaker2-codegen/pom.xml
@@ -6,79 +6,40 @@
     <artifactId>beanmaker2-codegen</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>org.beanmaker</groupId>
+        <artifactId>beanmaker2</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <name>BeanMaker V2 Code Generator</name>
     <description>
         BeanMaker Framework Version 2, Code Generator
     </description>
     <url>https://github.com/cpythoud/beanmaker-v2</url>
 
-    <licenses>
-        <license>
-            <name>The Apache License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
-
-    <developers>
-        <developer>
-            <id>cpythoud</id>
-            <name>Christophe Pythoud</name>
-            <organization>ABCIS</organization>
-            <organizationUrl>https://github.com/abcis-ch</organizationUrl>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>scm:git://github.com/cpythoud/beanmaker-v2.git</connection>
-        <developerConnection>scm:git://github.com/cpythoud/beanmaker-v2.git</developerConnection>
-        <url>https://github.com/cpythoud/beanmaker-v2</url>
-    </scm>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.beanmaker</groupId>
             <artifactId>beanmaker2-util</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jcodegen</groupId>
             <artifactId>java-codegen</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jcodegen</groupId>
             <artifactId>html-codegen</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.dbbeans</groupId>
             <artifactId>dbbeans-sql-lib</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <build>
         <pluginManagement>
@@ -190,11 +151,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.3.2</version>
                 <configuration>
-                    <source>11</source>
-                    <!--<sourceFileExcludes>
-                        <exclude>rodeo/password/pgencheck/Test*.java</exclude>
-                        <exclude>rodeo/password/pgencheck/*Examples.java</exclude>
-                    </sourceFileExcludes>-->
+                    <source>17</source>
                 </configuration>
             </plugin>
         </plugins>
