--- a/beanmaker2-runtime/pom.xml
+++ b/beanmaker2-runtime/pom.xml
@@ -12,96 +12,46 @@
     </description>
     <url>https://github.com/cpythoud/beanmaker-v2</url>
 
-    <licenses>
-        <license>
-            <name>The Apache License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
-
-    <developers>
-        <developer>
-            <id>cpythoud</id>
-            <name>Christophe Pythoud</name>
-            <organization>ABCIS</organization>
-            <organizationUrl>https://github.com/abcis-ch</organizationUrl>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>scm:git://github.com/cpythoud/beanmaker-v2.git</connection>
-        <developerConnection>scm:git://github.com/cpythoud/beanmaker-v2.git</developerConnection>
-        <url>https://github.com/cpythoud/beanmaker-v2</url>
-    </scm>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
-
-    <!--<repositories>
-        <repository>
-            <id>local</id>
-            <name>Local</name>
-            <url>file://${project.basedir}/lib</url>
-        </repository>
-    </repositories>-->
+    <parent>
+        <groupId>org.beanmaker</groupId>
+        <artifactId>beanmaker2</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.beanmaker</groupId>
             <artifactId>beanmaker2-util</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jcodegen</groupId>
             <artifactId>html-codegen</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.dbbeans</groupId>
             <artifactId>dbbeans-sql-lib</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.4</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.11.0</version>
         </dependency>
         <dependency>
             <groupId>rodeo.password</groupId>
             <artifactId>password-rodeo</artifactId>
-            <version>1.0</version>
         </dependency>
     </dependencies>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <build>
         <pluginManagement>
