--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 
     <modules>
         <module>beanmaker2-util</module>
+        <module>beanmaker2-console</module>
         <module>beanmaker2-runtime</module>
         <module>beanmaker2-codegen</module>
     </modules>
@@ -102,6 +103,21 @@
                 <groupId>rodeo.password</groupId>
                 <artifactId>password-rodeo</artifactId>
                 <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli</artifactId>
+                <version>4.6.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.fusesource.jansi</groupId>
+                <artifactId>jansi</artifactId>
+                <version>2.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli-jansi-graalvm</artifactId>
+                <version>1.2.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
