Add runtime classes to support importing data from csv files

--- a/beanmaker2-runtime/pom.xml
+++ b/beanmaker2-runtime/pom.xml
@@ -50,6 +50,10 @@
             <groupId>rodeo.password</groupId>
             <artifactId>password-rodeo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
