--- a/beanmaker2-runtime/pom.xml
+++ b/beanmaker2-runtime/pom.xml
@@ -54,6 +54,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
         </dependency>
+        <dependency>
+            <groupId>rodeo.password</groupId>
+            <artifactId>password-rodeo</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
