--- a/beanmaker2-util/pom.xml
+++ b/beanmaker2-util/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>beanmaker2-util</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>BeanMaker V2, Utilities</name>
+    <name>BeanMaker V2 Utilities</name>
     <description>
         BeanMaker Framework Version 2, Utilities
     </description>
