--- a/beanmaker2-email-smtp/pom.xml
+++ b/beanmaker2-email-smtp/pom.xml
@@ -21,6 +21,18 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.beanmaker</groupId>
+            <artifactId>beanmaker2-email</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
