--- a/beanmaker2-email/pom.xml
+++ b/beanmaker2-email/pom.xml
@@ -21,6 +21,10 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.beanmaker</groupId>
+            <artifactId>beanmaker2-util</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
