--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
+                <groupId>org.beanmaker</groupId>
+                <artifactId>beanmaker2-email</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jcodegen</groupId>
                 <artifactId>java-codegen</artifactId>
                 <version>1.0-SNAPSHOT</version>
@@ -125,6 +130,16 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-csv</artifactId>
                 <version>1.10.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-email</artifactId>
+                <version>1.5</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>javax.mail-api</artifactId>
+                <version>1.5.6</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
