--- a/beanmaker2-email/pom.xml
+++ b/beanmaker2-email/pom.xml
@@ -25,6 +25,10 @@
             <groupId>org.beanmaker</groupId>
             <artifactId>beanmaker2-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
