--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
                 <artifactId>javax.mail-api</artifactId>
                 <version>1.5.6</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.tika</groupId>
+                <artifactId>tika-core</artifactId>
+                <version>2.9.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
