--- a/beanmaker2-codegen/pom.xml
+++ b/beanmaker2-codegen/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beanmaker2-codegen</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <parent>
         <groupId>org.beanmaker</groupId>
         <artifactId>beanmaker2</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
 
     <name>BeanMaker V2 Code Generator</name>
@@ -16,8 +16,6 @@
         BeanMaker Framework Version 2, Code Generator
     </description>
     <url>https://github.com/cpythoud/beanmaker-v2</url>
-
-    <!-- DO NOT FORGET TO UPDATE BUILD NUMBER IN Version.java PRIOR TO INSTALLING A NEW VERSION -->
 
     <dependencies>
         <dependency>
