--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.beanmaker</groupId>
     <artifactId>beanmaker2</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>pom</packaging>
 
     <name>BeanMaker V2</name>
@@ -39,6 +39,9 @@
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <version.major>2</version.major>
+        <version.minor>0</version.minor>
+        <version.patch>0</version.patch>
     </properties>
 
     <distributionManagement>
@@ -68,12 +71,12 @@
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-util</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>2.0</version>
             </dependency>
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-email</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>2.0</version>
             </dependency>
             <dependency>
                 <groupId>org.jcodegen</groupId>
@@ -150,6 +153,12 @@
     </dependencyManagement>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -245,6 +254,11 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-versions-plugin</artifactId>
+                    <version>2.17.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
