Update version to 2.0.1
Various pom.xml files were updated to change the version from 2.0 to 2.0.1. The Version.java and version.properties file were also updated to reflect the new version and handle version prefixes/postfixes. This version update extends to all the submodules of BeanMaker V2 project.

--- a/beanmaker2-util/src/main/resources/version.properties
+++ b/beanmaker2-util/src/main/resources/version.properties
@@ -1,5 +1,7 @@
 # Beanmaker version information
 
-version.major = ${version.major}
-version.minor = ${version.minor}
-version.patch = ${version.patch}
+version.prefix  = ${version.prefix}
+version.major   = ${version.major}
+version.minor   = ${version.minor}
+version.patch   = ${version.patch}
+version.postfix = ${version.postfix}
