--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.beanmaker</groupId>
     <artifactId>beanmaker2</artifactId>
-    <version>2.0</version>
+    <version>2.0.1</version>
     <packaging>pom</packaging>
 
     <name>BeanMaker V2</name>
@@ -39,9 +39,11 @@
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <version.prefix/>
         <version.major>2</version.major>
         <version.minor>0</version.minor>
-        <version.patch>0</version.patch>
+        <version.patch>1</version.patch>
+        <version.postfix/>
     </properties>
 
     <distributionManagement>
@@ -71,12 +73,12 @@
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-util</artifactId>
-                <version>2.0</version>
+                <version>2.0.1</version>
             </dependency>
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-email</artifactId>
-                <version>2.0</version>
+                <version>2.0.1</version>
             </dependency>
             <dependency>
                 <groupId>org.jcodegen</groupId>
