--- a/beanmaker2-codegen/pom.xml
+++ b/beanmaker2-codegen/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beanmaker2-codegen</artifactId>
-    <version>2.0.1</version>
+    <version>2.1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.beanmaker</groupId>
         <artifactId>beanmaker2</artifactId>
-        <version>2.0.1</version>
+        <version>2.1-SNAPSHOT</version>
     </parent>
 
     <name>BeanMaker V2 Code Generator</name>
