--- a/beanmaker2-console/pom.xml
+++ b/beanmaker2-console/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beanmaker2-console</artifactId>
-    <version>2.0.1</version>
+    <version>2.1-SNAPSHOT</version>
 
     <name>BeanMaker V2 Console Utilities</name>
     <description>
@@ -33,7 +33,7 @@
     <parent>
         <groupId>org.beanmaker</groupId>
         <artifactId>beanmaker2</artifactId>
-        <version>2.0.1</version>
+        <version>2.1-SNAPSHOT</version>
     </parent>
 
     <build>
