--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.beanmaker</groupId>
     <artifactId>beanmaker2</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1</version>
     <packaging>pom</packaging>
 
     <name>BeanMaker V2</name>
@@ -43,7 +43,7 @@
         <version.major>2</version.major>
         <version.minor>1</version.minor>
         <version.patch>0</version.patch>
-        <version.postfix>SNAPSHOT</version.postfix>
+        <version.postfix/>
     </properties>
 
     <distributionManagement>
@@ -73,12 +73,12 @@
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-util</artifactId>
-                <version>2.1-SNAPSHOT</version>
+                <version>2.1</version>
             </dependency>
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-email</artifactId>
-                <version>2.1-SNAPSHOT</version>
+                <version>2.1</version>
             </dependency>
             <dependency>
                 <groupId>org.jcodegen</groupId>
