--- a/beanmaker2-email/pom.xml
+++ b/beanmaker2-email/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <artifactId>beanmaker2</artifactId>
         <groupId>org.beanmaker</groupId>
-        <version>2.2-SNAPSHOT</version>
+        <version>2.2</version>
     </parent>
 
     <artifactId>beanmaker2-email</artifactId>
-    <version>2.2-SNAPSHOT</version>
+    <version>2.2</version>
 
     <name>BeanMaker V2 Email Library</name>
     <description>
