--- a/beanmaker2-util/pom.xml
+++ b/beanmaker2-util/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>beanmaker2-util</artifactId>
-    <version>2.2</version>
+    <version>2.3-SNAPSHOT</version>
 
     <name>BeanMaker V2 Utilities</name>
     <description>
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.beanmaker</groupId>
         <artifactId>beanmaker2</artifactId>
-        <version>2.2</version>
+        <version>2.3-SNAPSHOT</version>
     </parent>
 
     <build>
