--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.beanmaker</groupId>
     <artifactId>beanmaker2</artifactId>
-    <version>2.2</version>
+    <version>2.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>BeanMaker V2</name>
@@ -41,9 +41,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <version.prefix/>
         <version.major>2</version.major>
-        <version.minor>2</version.minor>
+        <version.minor>3</version.minor>
         <version.patch>0</version.patch>
-        <version.postfix/>
+        <version.postfix>SNAPSHOT</version.postfix>
     </properties>
 
     <distributionManagement>
@@ -73,12 +73,12 @@
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-util</artifactId>
-                <version>2.2</version>
+                <version>2.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.beanmaker</groupId>
                 <artifactId>beanmaker2-email</artifactId>
-                <version>2.2</version>
+                <version>2.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jcodegen</groupId>
