--- a/beanmaker2-runtime/pom.xml
+++ b/beanmaker2-runtime/pom.xml
@@ -55,6 +55,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
