--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
                 <artifactId>tika-core</artifactId>
                 <version>2.9.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>2.0.16</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
