Switch from javax.servlet-api to javaee-web-api
Replaced `javax.servlet-api` dependency with `javaee-web-api` across `pom.xml` and module files. Updated artifact group and version to align with the new dependency.

--- a/beanmaker2-runtime/pom.xml
+++ b/beanmaker2-runtime/pom.xml
@@ -31,8 +31,8 @@
             <artifactId>html-codegen</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
