--- a/pom.xml
+++ b/pom.xml
@@ -96,9 +96,9 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>4.0.1</version>
+                <groupId>javax</groupId>
+                <artifactId>javaee-web-api</artifactId>
+                <version>8.0.1</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
